# mimalloc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
.github/workflows/: ci.yml
test/bcr/: .bazelrc  BUILD.bazel  MODULE.bazel
