bazel_dep(name = "mimalloc")
local_path_override(module_name = "mimalloc", path = "../..")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "toolchains_musl", version = "0.1.17")

toolchains_musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl", dev_dependency = True)
toolchains_musl.config(
    extra_target_compatible_with = ["//:musl"],
)
